2006-02-20  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign.c (igraph_write_graph_lgl) : error handling bug 
	hunted

2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/vector.c (igraph_vector_binsearch) : bug corrected

2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/random.c (igraph_random_sample) : correct upper limit bug

2006-01-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* examples/simple/igraph_es_adj.c : updated to be c++ compatible
	* examples/simple/igraph_es_fromto.c : updated to be c++ compatible
	* examples/simple/igraph_vs_vector.c : updated to c++ compatible
	* examples/simple/igraph_degree.c : updated to c++ compatible
	* examples/simple/igraph_neighbors.c : updated to c++ compatible
	* examples/simple/vector_ptr.c : updated to c++ compatible

2006-01-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/attributes.c (igraph_get_edge_attributes)
	(igraph_set_edge_attributes) : updated to use edge sequences

2006-01-20  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/random.c (igraph_random_sample_alga, igraph_random_sample) :
	use floor instead of trunc, rint instead of round, sunos 5.8

2006-01-20  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R 
	(edge.betweenness) : use edge sequences
	* interfaces/R/igraph/R/iterators.R (as.vector) : added
	
2006-01-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c (R_igraph_read_graph_edgelist)
	(R_igraph_read_graph_lgl, R_igraph_read_graph_ncol)
	(R_igraph_write_graph_edgelist, R_igraph_write_graph_lgl)
	(R_igraph_write_graph_ncol) : make these work on systems without
	fmemopen and open_memstream
	* interfaces/R/igraph/R/foreign.R (read.graph, read.graph.edgelist)
	(read.graph.lgl, read.graph.ncol, write.graph, write.graph.ncol)
	(write.graph.lgl, write.graph.edgelist) : make this work on systems 
	without fmemopen and open_memstream (eg. mswin)
	* interfaces/R/igraph/R/configwin.R (igraph.i.have.fmemopen)