@@ -1,5 +1,5 @@
 Package: igraph
-Version: 0.1.1
+Version: 0.1.2
 Date: Januar 25, 2005
 Title:  IGraph class
 Author: Gabor Csardi <csardi@rmki.kfki.hu>
